# x_videos-dowloads

./: .gitignore  CLAUDE.md  COOKIE_GUIDE.md  Cargo.toml  HANDOFF.md  PLAN-IMPROVEMENTS.md  PLAN.md  README.md  x_video_downloader.sh
openspec/changes/realtime-collaboration/: README.md  design.md  proposal.md  tasks.md
openspec/changes/realtime-collaboration/specs/central-service/: spec.md
openspec/changes/realtime-collaboration/specs/p2p-transfer/: spec.md
openspec/changes/realtime-collaboration/specs/shared-queue/: spec.md
openspec/changes/realtime-collaboration/specs/task-distribution/: spec.md
openspec/changes/realtime-collaboration/specs/team-management/: spec.md
src/: config.rs  downloader.rs  gui.rs  history.rs  lib.rs  main.rs  theme.rs  types.rs  yt_dlp.rs
src/collaboration/: README.md  mod.rs  types.rs
src/collaboration/client/: discovery.rs  mod.rs  queue.rs  ws.rs
src/collaboration/crypto/: auth.rs  hashring.rs  mod.rs
src/collaboration/discovery/: mod.rs  stun.rs
src/collaboration/server/: db.rs  handler.rs  mod.rs  ws.rs
src/collaboration/transfer/: downloader.rs  http_server.rs  mod.rs
tests/: types_test.rs
