[package]
name = "x-video-downloader"
version = "0.1.0"
edition = "2021"
authors = ["X Video Downloader Team"]
description = "A high-performance video downloader for x.com (Twitter) videos"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "cookies"], default-features = false }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }

# 异步 trait
async-trait = "0.1"

# URL 处理
url = "2.5"

# CLI 参数解析
clap = { version = "4.4", features = ["derive"] }

# 正则表达式
regex = "1.10"

# 日期时间
chrono = { version = "0.4", features = ["serde", "clock", "std"], default-features = false }

# 异步流处理
futures = "0.3"

# 字节处理
bytes = "1.5"

# 临时文件管理
tempfile = "3.10"

# 单例模式
once_cell = "1.19"

# 文件路径处理
directories = "5.0"

# 配置文件
toml = "0.8"

# 随机数生成
rand = "0.8"

# GUI框架
iced = { version = "0.12", features = ["image", "svg"] }

# 文件对话框
rfd = "0.15"

# 图片处理
image = "0.25"

# 协作文能
tokio-tungstenite = "0.21"
futures-util = "0.3"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 本地 IP
local-ip-address = "0.6"

# STUN (NAT穿透)
stun = "0.3"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "x-video-downloader"
path = "src/main.rs"
